--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,6 @@
 APP_NAME="Test php servers load"
-APP_ENV=local
-APP_KEY=base64:BpyOMWC1WtM01FShbJ0f4bimGwVNrUhRA/7vby+6SmQ=
+APP_ENV=production
+APP_KEY=
 APP_DEBUG=false
 APP_DEBUG_ALLOWED_IPS=
 APP_URL=fpm-127-0-0-1.nip.io:8080
