--- a/php/fpm/Dockerfile
+++ b/php/fpm/Dockerfile
@@ -6,4 +6,6 @@ RUN apt-get update \
 
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+
 WORKDIR /var/www/html
